--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,11 +16,11 @@
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
             {% endif %}
 
-            <h1><a href="/">Shane's Blog</a></h1>
+            <h1 class=""><a href="/">Shane's Blog</a></h1>
         </div>
         <div class="content container">
             <div class="row">
-                <div class="col-md-8">
+                <div class="col-md-20">
                     {% block content %}
                     {% endblock %}
                 </div>
