--- a/blog/static/css/omg.css
+++ b/blog/static/css/omg.css
@@ -15,6 +15,7 @@
     body{
       font-family: 'Bookman Old Style';
       background-color: BlanchedAlmond;
+      text-align: justify;
     
     }
     h1 {
@@ -43,6 +44,7 @@
     color: black;
     font-size: 20px;
     margin-bottom: 70px;
+    text-align: justify;
     }
     .post h2 a, .post h2 a:visited {
     color: #000000;
