--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="{% static 'css/bloger.css' %}">
+        <link rel="stylesheet" href="{% static 'css/omg.css' %}">
 
     </head> 
     <body>
@@ -20,7 +20,7 @@
         </div>
         <div class="content container">
             <div class="row">
-                <div class="col-md-20">
+                <div>
                     {% block content %}
                     {% endblock %}
                 </div>
