--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -11,6 +11,14 @@
 
     </head> 
     <body>
+        <style>
+            make {
+                color: black;
+                font-size: 20px;
+                margin-bottom: 70px;
+                text-align: justify;
+            }
+        </style>
         <div class="page-header">
             {% if user.is_authenticated %}
             <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
@@ -20,7 +28,7 @@
         </div>
         <div class="content container">
             <div class="row">
-                <div>
+                <div class="make">
                     {% block content %}
                     {% endblock %}
                 </div>
